--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,10 +116,14 @@ body {
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
+	* {
+		@apply border-border outline-ring/50;
 	}
-  body {
-    @apply bg-background text-foreground;
+	body {
+		@apply bg-background text-foreground;
+	}
+
+	.noHover {
+		pointer-events: none;
 	}
 }
